// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Action/> should render with a Body component 1`] = `
<div
  class="http"
>
  <div
    class="formParamRow"
  >
    <div
      class="formParamSelect"
    >
      <label
        class="label selectLabel"
        for="httpMethod"
      >
        Method
      </label>
      <div>
        <div
          class="dropdown"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class=""
            data-toggle="dropdown"
          >
            <div
              class="select dropdown-toggle"
            >
              <span
                class="label"
                data-testid="selected-httpMethod"
                style="min-width: 10px; opacity: 1;"
              >
                PUT
              </span>
              <input
                autocomplete="chrome-off"
                class="input"
                id="httpMethod"
                style="min-width: 10px;"
                type="text"
                value=""
              />
              <i
                class="material-icons dropdownIcon"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="options longDropdown dropdown-menu"
            role="menu"
            tabindex="-1"
          >
            
            <button
              class="option option--focused dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <span>
                GET
              </span>
            </button>
            <button
              class="option dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <span>
                POST
              </span>
            </button>
            <button
              class="option dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <span>
                PUT
              </span>
            </button>
            <button
              class="option dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <span>
                PATCH
              </span>
            </button>
            <button
              class="option dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <span>
                DELETE
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="formParamLargeCol"
    >
      <div>
        <label
          class="label label"
          for="input-text-3"
        >
          URL
          <abbr
            aria-label="required"
            class="abbr"
            title="required"
          >
            *
          </abbr>
        </label>
        <div
          class="wrapper"
        >
          <input
            class="input"
            id="input-text-3"
            name="url"
            pattern="*"
            required=""
            type="text"
            value="www.someurl.com"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="formParamSection"
  >
    Headers
  </div>
  <div>
    <button
      aria-disabled="false"
      class="wrapper fill secondary small"
      type="button"
    >
      <span
        class="wrapper"
      >
        <i
          class="material-icons icon isLeft small"
        >
          add
        </i>
      </span>
      Header
    </button>
  </div>
  <div
    class="formParamSection"
  >
    Query Parameters
  </div>
  <div>
    <button
      aria-disabled="false"
      class="wrapper fill secondary small"
      type="button"
    >
      <span
        class="wrapper"
      >
        <i
          class="material-icons icon isLeft small"
        >
          add
        </i>
      </span>
      Parameter
    </button>
  </div>
  <div
    class="formParamSection"
  >
    Body
  </div>
  <fieldset
    class="mb-4"
    name="radio-field-5"
  >
    <div
      class="option"
    >
      <label
        class="label label"
        for="application/json"
      >
        <input
          checked=""
          class="input"
          id="application/json"
          name="radio-field-5"
          type="radio"
        />
        application/json
      </label>
    </div>
    <div
      class="option"
    >
      <label
        class="label label"
        for="application/x-www-form-urlencoded"
      >
        <input
          class="input"
          id="application/x-www-form-urlencoded"
          name="radio-field-5"
          type="radio"
        />
        application/x-www-form-urlencoded
      </label>
    </div>
  </fieldset>
  <div
    class="InputField form-group"
    color=""
  >
    <div
      class=""
    >
      <div
        class="form-group"
      >
        <div
          class="controls"
        >
          <textarea
            class="form-control"
            id="id-json"
            rows="6"
          >
            {}
          </textarea>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Action/> should render without a Body component 1`] = `
<div
  class="http"
>
  <div
    class="formParamRow"
  >
    <div
      class="formParamSelect"
    >
      <label
        class="label selectLabel"
        for="httpMethod"
      >
        Method
      </label>
      <div>
        <div
          class="dropdown"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class=""
            data-toggle="dropdown"
          >
            <div
              class="select dropdown-toggle"
            >
              <span
                class="label"
                data-testid="selected-httpMethod"
                style="min-width: 10px; opacity: 1;"
              >
                GET
              </span>
              <input
                autocomplete="chrome-off"
                class="input"
                id="httpMethod"
                style="min-width: 10px;"
                type="text"
                value=""
              />
              <i
                class="material-icons dropdownIcon"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="options longDropdown dropdown-menu"
            role="menu"
            tabindex="-1"
          >
            
            <button
              class="option option--focused dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <span>
                GET
              </span>
            </button>
            <button
              class="option dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <span>
                POST
              </span>
            </button>
            <button
              class="option dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <span>
                PUT
              </span>
            </button>
            <button
              class="option dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <span>
                PATCH
              </span>
            </button>
            <button
              class="option dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <span>
                DELETE
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="formParamLargeCol"
    >
      <div>
        <label
          class="label label"
          for="input-text-1"
        >
          URL
          <abbr
            aria-label="required"
            class="abbr"
            title="required"
          >
            *
          </abbr>
        </label>
        <div
          class="wrapper"
        >
          <input
            class="input"
            id="input-text-1"
            name="url"
            pattern="*"
            required=""
            type="text"
            value="www.someurl.com"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="formParamSection"
  >
    Headers
  </div>
  <div>
    <button
      aria-disabled="false"
      class="wrapper fill secondary small"
      type="button"
    >
      <span
        class="wrapper"
      >
        <i
          class="material-icons icon isLeft small"
        >
          add
        </i>
      </span>
      Header
    </button>
  </div>
  <div
    class="formParamSection"
  >
    Query Parameters
  </div>
  <div>
    <button
      aria-disabled="false"
      class="wrapper fill secondary small"
      type="button"
    >
      <span
        class="wrapper"
      >
        <i
          class="material-icons icon isLeft small"
        >
          add
        </i>
      </span>
      Parameter
    </button>
  </div>
</div>
`;
